// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MailInputForm snapshot tests should match the snapshot at mail exists error 1`] = `
[
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      onlyEmail
    </p>
    <div
      className="login-modal-input-box-container login-modal-wrong-input-border"
    >
      <input
        className="login-modal-input-text"
        data-testid="emailInput"
        onChange={[Function]}
        type="email"
        value="existing@mail.ru"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-green-on-black"
      onClick={[Function]}
    >
      accountLogin
    </button>
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`MailInputForm snapshot tests should match the snapshot at mail not valid error 1`] = `
[
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      onlyEmail
    </p>
    <div
      className="login-modal-input-box-container login-modal-wrong-input-border"
    >
      <input
        className="login-modal-input-text"
        data-testid="emailInput"
        onChange={[Function]}
        type="email"
        value="notAMailAddress"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;

exports[`MailInputForm snapshot tests should match the snapshot without error 1`] = `
[
  <div
    className="login-modal-input-container"
  >
    <p
      className="login-modal-input-help"
    >
      onlyEmail
    </p>
    <div
      className="login-modal-input-box-container"
    >
      <input
        className="login-modal-input-text"
        data-testid="emailInput"
        onChange={[Function]}
        type="email"
        value="enteredMail@form.fr"
      />
    </div>
  </div>,
  <div
    className="login-modal-button-container"
  >
    <button
      className="login-modal-button-black-on-green"
      onClick={[Function]}
    >
      next
    </button>
  </div>,
]
`;
